www/css/main.css
/* ... */
/*.sortable-task-list li {*/
    /*background-color: rgba(0,0,0,0);*/
    /*border-radius: 3px;*/
/*}*/





/*===================================================================================================================*/
/* MODAL WINDOWS */
/*===================================================================================================================*/
/*This class needs to apply to the calendar page, the nav bar and the status bar whenever a task card is opened on calendar page*/
.frostedGlass {
    -webkit-filter: blur(15px);
    -webket-transition: 0.4s ease;
}

/*This is the white transparent background behind the modal window. It covers the whole screen*/
.modal-bg{
    display: none;
    position:fixed;
    left:0;right:0;
    top:0;bottom:0;
    z-index:2;
    background-color:rgba(0, 0, 0, 0.1);
}

/*This is the modal window itself (class)*/
.modal{
    position: relative;
    background-color:#F5F5F6;
    display: block;
    z-index: 1;
    margin-left: auto;
    margin-right:auto;
    margin-top: 10%;
    box-shadow: 0 0 100px 0 rgba(0,0,0,0.4);
}

/*This is the close(x) button*/
.closeX{
    display: block;
    position: absolute;
    color: white;
    opacity: .5;
    font-weight: 300;
    font-size: 2em;
    right: 10px;
    top: 0;
}

.modalHeading{
    position: absolute;
    color: white;
    opacity: .6;
    font-family: Acme, sans-serif;
    text-transform: uppercase;
    font-size: 2em;
    margin-left: 10%;
    margin-top: 4%;
}

/*===================================================================================================================*/
/* MODAL WINDOW FOR VIEW TASK */
/*===================================================================================================================*/

/*This is the modal window for the task (with timer)*/
#taskModal{
    width:58%;
    height: 400px;
}

#leftSideTaskCard {
    position: relative;
    height: 100%;
    width: 50%;
    float: left;
}

#rightSideTaskCard {
    display: inline-block;
    position: relative;
    height:100%;
    width: 50%;
    background-color: whitesmoke;
}

#taskCardForm {
    position: absolute;
    height: 70%;
    width: 80%;
    line-height: 5%;
    left: 0;
    right: 0;
    bottom: 10px;
    margin: auto;
    -webkit-appearance: none;
}

.openTaskCardFormInput {
    width: 100%;
    margin-bottom: 20px;
    background-color: rgba(0,0,0,0);
    border: none;
    font-size: 1em;
    color: white;
    -webkit-appearance: none;
}

.openTaskCardFormInput:focus {
    background-color: rgba(255,255,255,.2);
    outline: none;
}

#taskCardHeadingDiv {
    position: absolute;
    width: 100%;
    height: 20%;
}

#taskSubject{
    color: white;
    opacity: .6;
    font-family: Acme, sans-serif;
    text-transform: uppercase;
    font-size: 2em;
    margin-left: 10%;
    margin-top: 5%;
}

#cardDescription{
    -webkit-box-sizing: border-box; /* For legacy WebKit based browsers */
    -moz-box-sizing: border-box; /* For legacy (Firefox <29) Gecko based browsers */
    box-sizing: border-box;
    wrap: soft;
    font-size: .95em;
    line-height: 1.75em;
    resize:none;
    overflow:hidden;
    min-height: 50px;
    max-height: 200px;
}

#cardTitle{
    -webkit-box-sizing: border-box; /* For legacy WebKit based browsers */
    -moz-box-sizing: border-box; /* For legacy (Firefox <29) Gecko based browsers */
    box-sizing: border-box;
    font-size: 1.2em;
    line-height: 1.6em;
    resize:none;
    overflow:hidden;
    min-height:50px;
    max-height: 100px;
}


#cardAssignedDate{
    -webkit-box-sizing: border-box; /* For legacy WebKit based browsers */
    -moz-box-sizing: border-box; /* For legacy (Firefox <29) Gecko based browsers */
    box-sizing: border-box;
}

#closeTaskModal{
    display: block;
    position: absolute;
    color: lightgray;
    font-weight: 300;
    font-size: 2em;
    right: 10px;
    top: 0px;
}


.openTaskCardFormInput::-webkit-input-placeholder {
    color: rgba(255, 255, 255, 0.5);
}

.openTaskCardFormInput:-moz-placeholder { /* Firefox 18- */
    color: rgba(255, 255, 255, 0.5);
}

.openTaskCardFormInput::-moz-placeholder {  /* Firefox 19+ */
    color: rgba(255, 255, 255, 0.5);
}

.openTaskCardFormInput:-ms-input-placeholder {
    color: rgba(255, 255, 255, 0.5);
}
/*===================================================================================================================*/
/* MODAL WINDOW FOR ADD TASK */
/*===================================================================================================================*/

/*This is the modal window for the adding a task*/
#addTaskModal{
    width: 58%;
    height:400px;
}


#addTaskForm {
    position: absolute;
    height: 70%;
    width: 80%;
    line-height: 5%;
    left: 0;
    right: 0;
    top: 15px;
    margin: auto;
    -webkit-appearance: none;
    border: transparent;
}

#addTaskCardHeadingDiv{
    position: relative;
    width: 100%;
    height: 20%;
    background-color: #95CAAD;
}

#addTaskCardContentDiv{
    position: relative;
    width: 100%;
    height: 80%;
    background-color: #E9ECEF;
}


.inputField {
    width: 100%;
    margin-bottom: 15px;
    background-color: rgba(255,255,255,.3);
    font-size: 1em;
    -webkit-appearance: none;
    border: none;
    padding: 10px;
    color: #607A93;

}

.inputField:focus {
    background-color: rgba(255,255,255,.6);
    outline: none;
}

#subjectInput{
    width: 50%;
    height: 30px;
    padding: 5px;
    line-height: 1;
    font-size: 1em;
    margin-top: 5%;
    -webkit-appearance: none;
    border-radius: 0;
    background: url(../img/dropDownArrow.png) no-repeat right rgba(255,255,255,.3);
    background-size: 30px 30px;
}
/* ... */

